# duckdb_e2e

./: .gitignore  checks.yaml  configuration.yaml  makefile  prefect.yaml  pyproject.toml
duckdb_e2e/: .user.yml  dbt_project.yml  profiles.yml
duckdb_e2e/models/: lethality.sql
duckdb_e2e/reports/.evidence/customization/: .profile.json
duckdb_e2e/reports/pages/: index.md
duckdb_e2e/reports/sources/covid_cases/: connection.yaml  covid_cases_query.sql
py/: extract_load.py
